[package]
name = "polkadot-re-mock"
version = "0.1.0"
authors = ["Sergey Pepyakin <sergei@parity.io>"]
edition = "2018"

[dependencies]
wasmi = "0.6.2"
thiserror = "1.0.6"
codec = { package = "parity-scale-codec", version = "1.1.0", features = ["derive"] }
spree-lamport-clock-primitives = { path = "../spree-lamport-clock/primitives" }
